--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>My Portfolio 2</title>
     <meta property="og:title" content="Raymond Gudito">
     <meta property="og:description" content="This is my Portfolio">
-    <meta property="og:image" img src="cover.png" alt="...">
+    <meta property="og:image" content="https://github.com/Raymond0627/raymond.gudito.com/commit/64db56a4f6091875a66bd28d1a1a06c3dc08ecd7">
     <meta property="og:url" content="https://raymond0627.github.io/raymond.gudito.com/">
 </head>
 
