--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         of an ever-evolving industry that is constantly pushing boundaries and creating new
                         possibilities.
                     </p>
-                    <a href="#">Download CV <i class="fa-solid fa-download"></i></a>
+                    <a href="My latest resume.pdf">Download CV <i class="fa-solid fa-download"></i></a>
                 </div>
                 <!-- menu col -->
                 <div class="home-menu-col">
