--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
                         </div>
                         <br> <span class="role">Front-End Developer</span>
                     </h1>
-                    <p>Being a student has allowed me to constantly learn and experiment with new ideas and techniques,
-                        which I incorporate into my work to provide the best possible results for my clients. I believe
-                        in keeping up with the latest trends and technologies in the industry to ensure that my clients
-                        receive modern and innovative solutions to their website needs.I am excited to be part
-                        of an ever-evolving industry that is constantly pushing boundaries and creating new
-                        possibilities.
+                    <p>Being a student has allowed me to constantly learn and experiment with new ideas and techniques, which I use into my work to deliver the best potential results for my clients. I believe in being current with industry trends and technologies to guarantee that my clients receive modern and unique solutions to their website needs. I am delighted to be a part of an ever-evolving industry that is continuously pushing limits and creating new possibilities.
                     </p>
                     <a href="My latest resume.pdf">Download CV <i class="fa-solid fa-download"></i></a>
                 </div>
@@ -84,9 +79,8 @@
                         essential for maintaining a balance between work and personal life. I also enjoy reading books
                         on
                         various topics in my free time.</p>
-                    <p>Being the youngest among all my siblings, I'm grateful for the financial support of my sister,
-                        which
-                        has allowed me to pursue my education and passion. My current address is Barangay Pasong Putik,
+                    <p>Being the youngest among all my siblings, I'm grateful for the financial support from my sister,
+                        which allowed me to pursue my education and passion.I am currently residing at Barangay Pasong Putik,
                         Novaliches, Quezon City, and I'm proud to serve my community as a skilled web developer and
                         designer. If you're looking for someone who is not only passionate about their work but also
                         maintains a healthy work-life balance, look no further than Raymond Gudito.</p>
