--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         various topics in my free time.</p>
                     <p>Being the youngest among all my siblings, I'm grateful for the financial support from my sister,
                         which allowed me to pursue my education and passion.I am currently residing at Barangay Pasong Putik,
-                        Novaliches, Quezon City, and I'm proud to serve my community as a skilled web developer and
+                        Novaliches, Quezon City, and delighted to serve my community as a skilled web developer and
                         designer. If you're looking for someone who is not only passionate about their work but also
                         maintains a healthy work-life balance, look no further than Raymond Gudito.</p>
                     <a href="#">Hire Me <i class="fa-solid fa-angles-right"></i></a>
